// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover match snapshot 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowLight": "#FFF9DD",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        content={
          <span>
            Hello!
          </span>
        }
        placement="top"
      >
        <WithStyles(Section)
          content={
            <span>
              Hello!
            </span>
          }
          innerRef={null}
          isExpandable={true}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
                "3": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi__",
                "generateId": [Function],
              },
            }
          }
          overrides={Object {}}
          placement="top"
          theme={
            Object {
              "colors": Object {
                "black": "#262B34",
                "blackLight": "#5f656b",
                "disabledGrey": "#ced4d9",
                "green": "#86AD20",
                "greenLight": "#e7f1d5",
                "grey": "#697782",
                "greyLight": "#f0f3f5",
                "greySoft": "#788590",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#fef4e6",
                "primarySoft": "#ff9d26",
                "red": "#f04540",
                "redDark": "#C43833",
                "redLight": "#FAE7E7",
                "redSoft": "#FF544F",
                "secondary": "#00A8Be",
                "secondaryGrey": "#e4eeff",
                "secondaryLight": "#D6EEF2",
                "secondarySoft": "#AADFE7",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "tableHeader": "#f6f7f9",
                "tableHover": "#FAFBFC",
                "text": Object {
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "green": "#86AD20",
                  "greySoft": "#788590",
                  "primary": "white",
                  "red": "#f04540",
                  "secondary": "#00A8Be",
                  "white": "#FFFFFF",
                  "yellow": "#E9B200",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
                "yellow": "#E9B200",
                "yellowLight": "#FFF9DD",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
        >
          <Section
            classes={
              Object {
                "collapsed": "HoiPoi__Section__collapsed-1-5",
                "header": "HoiPoi__Section__header-1-1",
                "icon": "HoiPoi__Section__icon-1-3",
                "remove": "HoiPoi__Section__remove-1-4",
                "root": "HoiPoi__Section__root-1-0",
                "title": "HoiPoi__Section__title-1-2",
              }
            }
            content={
              <span>
                Hello!
              </span>
            }
            isExpandable={true}
            overrides={Object {}}
            placement="top"
          >
            <div
              className="HoiPoi__Section__root-1-0"
            >
              <JssContextSubscriber>
                <WithStyles(Button)
                  innerRef={null}
                  jssContext={
                    Object {
                      "disableStylesGeneration": false,
                      "jss": Jss {
                        "generateId": [Function],
                        "id": 2,
                        "options": Object {
                          "Renderer": [Function],
                          "createGenerateId": [Function],
                          "plugins": Array [],
                        },
                        "plugins": PluginsRegistry {
                          "plugins": Object {
                            "external": Array [
                              Object {
                                "onCreateRule": [Function],
                                "onProcessStyle": [Function],
                                "onUpdate": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                                "onProcessRule": [Function],
                              },
                              Object {
                                "onProcessRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                                "onProcessRule": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessRule": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                            ],
                            "internal": Array [
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onCreateRule": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                            ],
                          },
                          "registry": Object {
                            "onChangeValue": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onCreateRule": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onProcessRule": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onProcessSheet": Array [],
                            "onProcessStyle": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onUpdate": Array [
                              [Function],
                            ],
                          },
                        },
                        "version": "10.0.0-alpha.16",
                      },
                      "managers": Object {
                        "1": SheetsManager {
                          "length": 1,
                          "sheets": WeakMap {},
                        },
                        "3": SheetsManager {
                          "length": 1,
                          "sheets": WeakMap {},
                        },
                      },
                      "sheetOptions": Object {
                        "classNamePrefix": "HoiPoi__",
                        "generateId": [Function],
                      },
                    }
                  }
                  overrides={Object {}}
                  size="medium"
                  theme={
                    Object {
                      "colors": Object {
                        "black": "#262B34",
                        "blackLight": "#5f656b",
                        "disabledGrey": "#ced4d9",
                        "green": "#86AD20",
                        "greenLight": "#e7f1d5",
                        "grey": "#697782",
                        "greyLight": "#f0f3f5",
                        "greySoft": "#788590",
                        "lines": "#dce3eb",
                        "link": "#216db3",
                        "linkDark": "#174a79",
                        "overlay": "rgba(33,33,33,0.55)",
                        "placeholders": "#e1e4e7",
                        "placeholdersHover": "#d0d4d8",
                        "primary": "#FF8C00",
                        "primaryDark": "#C87600",
                        "primaryLight": "#fef4e6",
                        "primarySoft": "#ff9d26",
                        "red": "#f04540",
                        "redDark": "#C43833",
                        "redLight": "#FAE7E7",
                        "redSoft": "#FF544F",
                        "secondary": "#00A8Be",
                        "secondaryGrey": "#e4eeff",
                        "secondaryLight": "#D6EEF2",
                        "secondarySoft": "#AADFE7",
                        "shadow": "rgba(0, 0, 0, 0.25)",
                        "tableHeader": "#f6f7f9",
                        "tableHover": "#FAFBFC",
                        "text": Object {
                          "black": "#3c4248",
                          "danger": "white",
                          "default": "#697782",
                          "green": "#86AD20",
                          "greySoft": "#788590",
                          "primary": "white",
                          "red": "#f04540",
                          "secondary": "#00A8Be",
                          "white": "#FFFFFF",
                          "yellow": "#E9B200",
                        },
                        "transparentBlack": "rgba(38, 43, 52, 0.8)",
                        "white": "#FFFFFF",
                        "yellow": "#E9B200",
                        "yellowLight": "#FFF9DD",
                      },
                      "effects": Object {
                        "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                        "buttonActive": Object {
                          "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                        },
                      },
                      "typography": Object {
                        "bigText": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 16,
                          "letterSpacing": 0.5,
                        },
                        "button": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 11,
                          "lineHeight": 1.5,
                        },
                        "defaultText": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 13,
                          "letterSpacing": 0.5,
                        },
                        "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                        "fontSizeBase": 13,
                        "fontSizeSmall": 11,
                        "letterSpacing": 0.5,
                        "lineHeightBase": 1.5,
                        "smallText": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 11,
                          "letterSpacing": 0.5,
                        },
                      },
                    }
                  }
                  type="filled"
                >
                  <Button
                    classes={
                      Object {
                        "big": "HoiPoi__Button__big-1-17",
                        "danger": "HoiPoi__Button__danger-1-15",
                        "disabled": "HoiPoi__Button__disabled-1-18",
                        "filled": "HoiPoi__Button__filled-1-12",
                        "fullWidth": "HoiPoi__Button__fullWidth-1-19",
                        "label": "HoiPoi__Button__label-1-7",
                        "labelLoading": "HoiPoi__Button__labelLoading-1-8",
                        "loader": "HoiPoi__Button__loader-1-9",
                        "outlined": "HoiPoi__Button__outlined-1-10",
                        "primary": "HoiPoi__Button__primary-1-14",
                        "root": "HoiPoi__Button__root-1-6",
                        "small": "HoiPoi__Button__small-1-16",
                        "squared": "HoiPoi__Button__squared-1-11",
                        "white": "HoiPoi__Button__white-1-13",
                      }
                    }
                    overrides={Object {}}
                    size="medium"
                    type="filled"
                  >
                    <button
                      className="HoiPoi__Button__root-1-6 HoiPoi__Button__filled-1-12 HoiPoi__Button__white-1-13"
                      type="button"
                    >
                      <span
                        className=""
                      >
                        <span
                          className="HoiPoi__Button__label-1-7"
                        >
                          top
                        </span>
                      </span>
                    </button>
                  </Button>
                </WithStyles(Button)>
              </JssContextSubscriber>
            </div>
          </Section>
        </WithStyles(Section)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Popover visible match snapshot 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowLight": "#FFF9DD",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        content={
          <span>
            Hello!
          </span>
        }
        placement="top"
      >
        <WithStyles(Section)
          content={
            <span>
              Hello!
            </span>
          }
          innerRef={null}
          isExpandable={true}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
                "3": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi__HoiPoi__",
                "generateId": [Function],
              },
            }
          }
          overrides={Object {}}
          placement="top"
          theme={
            Object {
              "colors": Object {
                "black": "#262B34",
                "blackLight": "#5f656b",
                "disabledGrey": "#ced4d9",
                "green": "#86AD20",
                "greenLight": "#e7f1d5",
                "grey": "#697782",
                "greyLight": "#f0f3f5",
                "greySoft": "#788590",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#fef4e6",
                "primarySoft": "#ff9d26",
                "red": "#f04540",
                "redDark": "#C43833",
                "redLight": "#FAE7E7",
                "redSoft": "#FF544F",
                "secondary": "#00A8Be",
                "secondaryGrey": "#e4eeff",
                "secondaryLight": "#D6EEF2",
                "secondarySoft": "#AADFE7",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "tableHeader": "#f6f7f9",
                "tableHover": "#FAFBFC",
                "text": Object {
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "green": "#86AD20",
                  "greySoft": "#788590",
                  "primary": "white",
                  "red": "#f04540",
                  "secondary": "#00A8Be",
                  "white": "#FFFFFF",
                  "yellow": "#E9B200",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
                "yellow": "#E9B200",
                "yellowLight": "#FFF9DD",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
        >
          <Section
            classes={
              Object {
                "collapsed": "HoiPoi__Section__collapsed-2-5",
                "header": "HoiPoi__Section__header-2-1",
                "icon": "HoiPoi__Section__icon-2-3",
                "remove": "HoiPoi__Section__remove-2-4",
                "root": "HoiPoi__Section__root-2-0",
                "title": "HoiPoi__Section__title-2-2",
              }
            }
            content={
              <span>
                Hello!
              </span>
            }
            isExpandable={true}
            overrides={Object {}}
            placement="top"
          >
            <div
              className="HoiPoi__Section__root-2-0"
            >
              <JssContextSubscriber>
                <WithStyles(Button)
                  innerRef={null}
                  jssContext={
                    Object {
                      "disableStylesGeneration": false,
                      "jss": Jss {
                        "generateId": [Function],
                        "id": 2,
                        "options": Object {
                          "Renderer": [Function],
                          "createGenerateId": [Function],
                          "plugins": Array [],
                        },
                        "plugins": PluginsRegistry {
                          "plugins": Object {
                            "external": Array [
                              Object {
                                "onCreateRule": [Function],
                                "onProcessStyle": [Function],
                                "onUpdate": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                                "onProcessRule": [Function],
                              },
                              Object {
                                "onProcessRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                                "onProcessRule": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessRule": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                            ],
                            "internal": Array [
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onCreateRule": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                            ],
                          },
                          "registry": Object {
                            "onChangeValue": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onCreateRule": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onProcessRule": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onProcessSheet": Array [],
                            "onProcessStyle": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onUpdate": Array [
                              [Function],
                            ],
                          },
                        },
                        "version": "10.0.0-alpha.16",
                      },
                      "managers": Object {
                        "1": SheetsManager {
                          "length": 1,
                          "sheets": WeakMap {},
                        },
                        "3": SheetsManager {
                          "length": 1,
                          "sheets": WeakMap {},
                        },
                      },
                      "sheetOptions": Object {
                        "classNamePrefix": "HoiPoi__HoiPoi__",
                        "generateId": [Function],
                      },
                    }
                  }
                  overrides={Object {}}
                  size="medium"
                  theme={
                    Object {
                      "colors": Object {
                        "black": "#262B34",
                        "blackLight": "#5f656b",
                        "disabledGrey": "#ced4d9",
                        "green": "#86AD20",
                        "greenLight": "#e7f1d5",
                        "grey": "#697782",
                        "greyLight": "#f0f3f5",
                        "greySoft": "#788590",
                        "lines": "#dce3eb",
                        "link": "#216db3",
                        "linkDark": "#174a79",
                        "overlay": "rgba(33,33,33,0.55)",
                        "placeholders": "#e1e4e7",
                        "placeholdersHover": "#d0d4d8",
                        "primary": "#FF8C00",
                        "primaryDark": "#C87600",
                        "primaryLight": "#fef4e6",
                        "primarySoft": "#ff9d26",
                        "red": "#f04540",
                        "redDark": "#C43833",
                        "redLight": "#FAE7E7",
                        "redSoft": "#FF544F",
                        "secondary": "#00A8Be",
                        "secondaryGrey": "#e4eeff",
                        "secondaryLight": "#D6EEF2",
                        "secondarySoft": "#AADFE7",
                        "shadow": "rgba(0, 0, 0, 0.25)",
                        "tableHeader": "#f6f7f9",
                        "tableHover": "#FAFBFC",
                        "text": Object {
                          "black": "#3c4248",
                          "danger": "white",
                          "default": "#697782",
                          "green": "#86AD20",
                          "greySoft": "#788590",
                          "primary": "white",
                          "red": "#f04540",
                          "secondary": "#00A8Be",
                          "white": "#FFFFFF",
                          "yellow": "#E9B200",
                        },
                        "transparentBlack": "rgba(38, 43, 52, 0.8)",
                        "white": "#FFFFFF",
                        "yellow": "#E9B200",
                        "yellowLight": "#FFF9DD",
                      },
                      "effects": Object {
                        "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                        "buttonActive": Object {
                          "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                        },
                      },
                      "typography": Object {
                        "bigText": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 16,
                          "letterSpacing": 0.5,
                        },
                        "button": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 11,
                          "lineHeight": 1.5,
                        },
                        "defaultText": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 13,
                          "letterSpacing": 0.5,
                        },
                        "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                        "fontSizeBase": 13,
                        "fontSizeSmall": 11,
                        "letterSpacing": 0.5,
                        "lineHeightBase": 1.5,
                        "smallText": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 11,
                          "letterSpacing": 0.5,
                        },
                      },
                    }
                  }
                  type="filled"
                >
                  <Button
                    classes={
                      Object {
                        "big": "HoiPoi__Button__big-2-17",
                        "danger": "HoiPoi__Button__danger-2-15",
                        "disabled": "HoiPoi__Button__disabled-2-18",
                        "filled": "HoiPoi__Button__filled-2-12",
                        "fullWidth": "HoiPoi__Button__fullWidth-2-19",
                        "label": "HoiPoi__Button__label-2-7",
                        "labelLoading": "HoiPoi__Button__labelLoading-2-8",
                        "loader": "HoiPoi__Button__loader-2-9",
                        "outlined": "HoiPoi__Button__outlined-2-10",
                        "primary": "HoiPoi__Button__primary-2-14",
                        "root": "HoiPoi__Button__root-2-6",
                        "small": "HoiPoi__Button__small-2-16",
                        "squared": "HoiPoi__Button__squared-2-11",
                        "white": "HoiPoi__Button__white-2-13",
                      }
                    }
                    overrides={Object {}}
                    size="medium"
                    type="filled"
                  >
                    <button
                      className="HoiPoi__Button__root-2-6 HoiPoi__Button__filled-2-12 HoiPoi__Button__white-2-13"
                      type="button"
                    >
                      <span
                        className=""
                      >
                        <span
                          className="HoiPoi__Button__label-2-7"
                        >
                          top
                        </span>
                      </span>
                    </button>
                  </Button>
                </WithStyles(Button)>
              </JssContextSubscriber>
            </div>
          </Section>
        </WithStyles(Section)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
